feat: basic routes, data base connect

--- a/client/movies.html
+++ b/client/movies.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is index page of server</h1>
+    <h1>This is client side</h1>
   </body>
 </html>
