--- a/client/movies.html
+++ b/client/movies.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="bootstrap.min.css" />
     <title>Movies list</title>
-    <script type="module" defer src="js/appFoods.js"></script>
+    <script type="module" defer src="js/appMovies.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
   <body>
