feat: buttons for pegenations added

--- a/client/movies.html
+++ b/client/movies.html
@@ -24,6 +24,8 @@
         </thead>
         <tbody id="id_parent"></tbody>
       </table>
+      <button class="btn btn-outline-primary" id="btnBack">Back</button>
+      <button class="btn btn-primary" id="btnNext">Next</button>
     </div>
   </body>
 </html>
