--- a/client/movies.html
+++ b/client/movies.html
@@ -12,6 +12,16 @@
   <body>
     <div class="container">
       <h1>Movies list:</h1>
+      <form id="search" class="d-flex mt-3 py-5" role="search">
+        <input
+          id="input"
+          class="form-control me-2"
+          type="search"
+          placeholder="Enter yoyr search request..."
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-primary" type="submit">Search</button>
+      </form>
       <table class="table table-striped table-hover">
         <thead>
           <tr>
